platform/observability/prometheus/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: prometheus-route
  namespace: observability
spec:
  parentRefs:
    - name: main-gateway
      namespace: istio-system
      sectionName: https-prometheus
  hostnames:
    - prometheus.lbrightlab.com
  rules:
    - backendRefs:
        - name: prometheus-kube-prometheus-prometheus
          port: 9090
